NIFI-12573 Improve support for Enum values in PropertyDescriptor.Builder
NIFI-12574 Add clearDefaultValue to PropertyDescriptor.Builder